# eml

./: .gitignore  README.md
emlyml/: README.md  pyproject.toml
emlyml/src/emlyml/: cli.py  emlyml.py
examples/: model.yaml
examples/eml_basic/: model.eml
python/emlyml/: setup.cfg
python/emlyml/src/emlyml/: demo.py
rust/eml/: Cargo.toml  README.md  demo.eml  notes.md
rust/eml/examples/: Makefile  index.js  package-lock.json  package.json
rust/eml/src/: identifier.rs  ingest.rs  main.rs  parse.rs
rust/eml/src/eventmodel/: mod.rs
rust/eml/src/svg/: arrow.rs  card.rs  document.rs  element.rs  line.rs  mod.rs  point.rs  rectangle.rs  swimlane.rs  text.rs
