[metadata]
name = emlyml
version = 0.0.1
author = Zach Waite
author_email = zach@waiteperspectives.com
description = Generate simple event models from yaml DSL
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/waiteperspectives/eml/emlyml
project_urls =
  Bug Tracker = https://github.com/waiteperspectives/eml/issues
classifiers =
  Programming Language :: Python :: 3
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent

[options]
package_dir =
  = src
packages = find:
python_requires = >=3.10
install_requires =
  pyyaml
  svg.py

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
  emlyml = emlyml.cli:main
